# douceurs

./: CMakeLists.txt
cmake/generic/: sources.cmake
script/douceurs_repo_version/: generate_git_version.py
src/douceurs_repo_version/: CMakeLists.txt
